# octaam

icaampp/: AUTHORS  CMakeLists.txt  README  TODO
icaampp/core/: CMakeLists.txt  aam.cc  aam.h  imagick.cc  imagick.h  mytypes.h  normalizing_aam.cc  normalizing_aam.h  project_out_aam.cc  project_out_aam.h  shape.cc  shape.h  simultaneous_aam.cc  simultaneous_aam.h  test.cc  texture.cc  texture.h  timemeasure.h  trainingset.h
icaampp/ext/newmat/: CMakeLists.txt
icaampp/ext/triangulate/: triangulate.cpp
icaampp/gui/: CMakeLists.txt  cairoarea.cc  cairoarea.h  main.cc  testwindow.cc  testwindow.h
icaampp/set/: convert.m  from_octaam.m  set32x32.mat  set48x48.mat  set64x64.mat
octaam/: LICENCE  LICENSE  README  TODO  annotate.m  fit.m  iteration.m  precompute.m  video_tracking.m
octaam/lib/: align_2d_set.m  compute_pca.m  get_appearance_patches.m  get_color_appearance_patches.m  get_tmap.m  get_tmap2.m  imread2.m  include.m  load_aam.m  load_cset.m  load_space.m  precompute_new_aam.m  rgb2gray.m  similarity_align.m  update_h_octave.m  update_h_rob_octave.m  warp_2d_octave.m  warp_coeffs.m
octaam/lib/ext/: Makefile  README  compute_jacobian_aux_copt.cc  get_tmap.cc  update_h_copt.cc  update_h_rob_copt.cc  warp_2d_copt.cc
octaam/lib/ext/face_detector/: Makefile  face_detector.cc  face_detector.h  fd_viola_jones.cc
octaam/trackers/mine/: iteration_core.m  precompute.m
octaam/trackers/normal/: iteration_core.m  precompute.m
octaam/trackers/pout/: iteration_core.m  precompute.m
octaam/trackers/rob_normal/: iteration_core.m  precompute.m
octaam/trackers/rob_simult/: iteration_core.m  precompute.m
octaam/trackers/simult/: iteration_core.m  precompute.m
