add_library(newmat
  bandmat.cpp
  cholesky.cpp
  evalue.cpp
  example.cpp
  fft.cpp
  garch.cpp
  hholder.cpp
  jacobi.cpp
  myexcept.cpp
  newfft.cpp
  newmat1.cpp
  newmat2.cpp
  newmat3.cpp
  newmat4.cpp
  newmat5.cpp
  newmat6.cpp
  newmat7.cpp
  newmat8.cpp
  newmat9.cpp
  newmatex.cpp
  newmatnl.cpp
  newmatrm.cpp
  nl_ex.cpp
  sl_ex.cpp
  solution.cpp
  sort.cpp
  submat.cpp
  svd.cpp
  test_exc.cpp
)
